# Wedding-Planner-OS-demo-Back

./: .dockerignore  .env.example  .gitignore  API_SPECIFICATION.md  CHANGELOG.md  CHROMADB_SETUP.md  CODE_REVIEW.md  COMMIT_GUIDE.md  Dockerfile  HTTP_SUMMARY.md  MISSING_FEATURES_ANALYSIS.md  README.md  README_PYTHON_VERSION.md  RENDER_ENV_SETUP.md  RESTART_SERVER.md  VECTOR_DB_SETUP.md  add_category_to_posts.sql  add_couple_entered_keys.py  add_couple_entered_keys.sql  add_couple_sharing.sql  add_invitation_fields.sql  add_user_role_column.sql  add_vector_db_columns.sql  add_vendor_id_to_posts.sql  check_and_fix_db.py  create_admin_account.py  create_all_role_accounts.py  create_calendar_tables.sql  create_chat_memory_table.sql  create_chat_memory_table_script.py  create_demo_accounts.py  create_demo_accounts.sql  create_demo_accounts_with_migration.py  create_digital_invitation_tables.sql  create_digital_invitation_tables_script.py  create_gemini_usage_limit_table.sql  create_invitation_tables.sql  create_invitation_tables_script.py  create_invitation_templates.py  create_tables.py  (+20 more)
app/: main.py  schemas.py
app/controllers/: __init__.py  auth_controller.py  budget_controller.py  calendar_controller.py  chat_controller.py  chat_memory_controller.py  comment_controller.py  couple_controller.py  digital_invitation_controller.py  invitation_controller.py  post_controller.py  user_controller.py  vendor_controller.py  vendor_message_controller.py  voice_controller.py
app/core/: admin.py  admin_with_sql.py  categories.py  couple_helpers.py  database.py  error_codes.py  (+7 more)
(+58 files in other folders)
